# DiscreteSegments

./: CMakeLists.txt  README.md  fraction.cpp  fraction.h  main.cpp  mydbs.cpp  mydbs.h  mydsl.cpp  mydsl.h  mydss.cpp  mydss.h  myfunctions.cpp  myfunctions.h  mypch.cpp  mypch.h
